# fancy_gym

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MUJOCO_LOG.TXT  README.md  dmp_env_wrapper_example.py  dmp_pd_control_example.py  example.py  mp_wrapper.py  policies.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ensure-release-tagged.yaml  ensure-version-consistency.yaml  host_docs_static.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-package-conda.yml
alr_envs/: __init__.py
alr_envs/alr/: __init__.py
alr_envs/alr/classic_control/: README.MD  __init__.py  utils.py
alr_envs/alr/mujoco/: __init__.py
alr_envs/black_box/: black_box_wrapper.py  raw_interface_wrapper.py
alr_envs/black_box/controller/: base_controller.py  controller_factory.py  meta_world_controller.py  pd_controller.py  pos_controller.py  vel_controller.py
alr_envs/black_box/factory/: controller_factory.py  phase_generator_factory.py  trajectory_generator_factory.py
alr_envs/classic_control/: __init__.py  episodic_simple_reacher.py  hole_reacher.py  hole_reacher_v2.py  simple_reacher.py  utils.py  viapoint_reacher.py
alr_envs/classic_control/hole_reacher/: hole_reacher.py  hole_reacher_mp_wrapper.py  mp_wrapper.py
alr_envs/classic_control/simple_reacher/: simple_reacher.py  simple_reacher_mp_wrapper.py
alr_envs/classic_control/viapoint_reacher/: mp_wrapper.py  viapoint_reacher.py  viapoint_reacher_mp_wrapper.py
alr_envs/dmc/: Ball_in_the_cup_mp_wrapper.py  README.MD  __init__.py  dmc_wrapper.py
alr_envs/dmc/ball_in_cup/: ball_in_the_cup_mp_wrapper.py
alr_envs/dmc/manipulation/: __init__.py
alr_envs/dmc/suite/: __init__.py
alr_envs/envs/: __init__.py
alr_envs/envs/mujoco/: __init__.py
alr_envs/examples/: examples_dmc.py  examples_general.py  examples_metaworld.py  examples_motion_primitives.py  examples_movement_primitives.py  examples_open_ai.py  pd_control_gain_tuning.py
alr_envs/meta/: README.MD  __init__.py  base_metaworld_mp_wrapper.py  button_press.py  goal_change.py  goal_change_mp_wrapper.py  goal_endeffector_change_mp_wrapper.py  goal_object_change_mp_wrapper.py  object_change.py  object_change_mp_wrapper.py
alr_envs/mp/: black_box_wrapper.py  episodic_wrapper.py  mp_factory.py  phase_generator_factory.py  raw_interface_wrapper.py
alr_envs/mp/controllers/: controller_factory.py  meta_world_controller.py  pd_controller.py  pos_controller.py  vel_controller.py
alr_envs/mujoco/: __init__.py  alr_mujoco_env.py  alr_reacher.py  alr_reward_fct.py  balancing.py
alr_envs/mujoco/ball_in_a_cup/: __init__.py  ball_in_a_cup.py  ball_in_a_cup_mp_wrapper.py  ball_in_a_cup_positional_env_wrapper.py  ball_in_a_cup_positional_wrapper.py  ball_in_a_cup_reward.py  ball_in_a_cup_reward_simple.py  ball_in_a_cup_simple.py  biac_pd.py  utils.py
alr_envs/mujoco/beerpong/: beerpong.py  beerpong_reward.py  beerpong_reward_simple.py  beerpong_simple.py  utils.py
alr_envs/mujoco/hopper/: hopper.py  hopper_episodic.py  hopper_example.py  hopper_reward.py
alr_envs/mujoco/reacher/: alr_reacher.py
alr_envs/open_ai/: README.MD  __init__.py
alr_envs/open_ai/classic_control/: __init__.py
alr_envs/open_ai/continuous_mountain_car/: __init__.py  mp_wrapper.py  (+1 more)
alr_envs/stochastic_search/: __init__.py  stochastic_search.py
alr_envs/utils/: __init__.py  contextual_env.py  detpmp_env_wrapper.py  dmc2gym_wrapper.py  dmc_wrapper.py  dmp_async_vec_env.py  dmp_env_wrapper.py  make_env_helpers.py  mp_env_async_sampler.py  policies.py  positional_env.py  time_aware_observation.py  utils.py
docs/source/: api.rst  conf.py  index.rst
fancy_gym/: __init__.py
fancy_gym/black_box/: black_box_wrapper.py  raw_interface_wrapper.py
fancy_gym/dmc/: README.MD  __init__.py  dmc_wrapper.py
fancy_gym/envs/: __init__.py  registry.py
fancy_gym/examples/: example_replanning_envs.py  example_sim_env.py  examples_air_hockey.py  examples_dmc.py  examples_general.py  examples_metaworld.py  examples_movement_primitives.py  examples_open_ai.py  mp_params_tuning.py  pd_control_gain_tuning.py  plotting.py  table_tennis_reproducebility.py
fancy_gym/meta/: README.MD  __init__.py  base_metaworld_mp_wrapper.py  goal_change_mp_wrapper.py  goal_endeffector_change_mp_wrapper.py  goal_object_change_mp_wrapper.py  metaworld_adapter.py  object_change_mp_wrapper.py
fancy_gym/open_ai/: README.MD  __init__.py
fancy_gym/utils/: env_compatibility.py  make_env_helpers.py  time_aware_observation.py  wrappers.py
reacher/: __init__.py
reacher.egg-info/: PKG-INFO  SOURCES.txt
reacher/envs/: __init__.py  reacher_5links.xml  reacher_env.py
test/: test_all_gym_builtin_envs.py  test_bb_envs.py  test_black_box.py  test_controller.py  test_custom.py  test_custom_envs.py  test_dmc.py  test_dmc_envs.py  test_envs.py  test_examples.py  test_fancy.py  test_fancy_envs.py  test_fancy_registry.py  test_gym.py  test_gym_envs.py  test_metaworld.py  test_metaworld_envs.py  test_replanning_envs.py  test_replanning_sequencing.py  utils.py
test/test_air_hockey/: test_action.py  test_envs.py  test_envs_cart.py  test_ik.py  test_ik_3dof.py  test_ik_7dof.py  test_mp.py  test_optimizer.py  test_traj_generator.py  test_traj_optimizer.py  test_utils.py
(+322 files in other folders)
