[project]
name = "fancy_gym"
version = "1.0"
description = "Fancy Gym: Unifying interface for various RL benchmarks with support for Black Box approaches."
readme = "README.md"
authors = [
    {name = "Fabian Otto", email = "fabian.otto@uni-tuebingen.de"},
    {name = "Onur Celik", email = "celik@kit.edu"},
    {name = "Dominik Roth", email = "fancy_gym@dominik-roth.eu"},
    {name = "Hongyi Zhou", email = "hongyi.zhou@kit.edu"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
homepage = "https://github.com/ALRhub/fancy_gym/"
repository = "https://github.com/ALRhub/fancy_gym/"

[project.urls]
Homepage = "https://github.com/ALRhub/fancy_gym/"

[build-system]
requires = ["setuptools>=51.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# If you have any entry points (scripts), define them here.

[project.dependencies]
gymnasium = ">=0.26.0"
mp_pytorch = "<=0.1.3"

[project.optional-dependencies]
dmc = ["shimmy[dm-control]", "Shimmy==1.0.0"]
metaworld = ["metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@d155d0051630bb365ea6a824e02c66c068947439#egg=metaworld"]
box2d = ["gymnasium[box2d]>=0.26.0"]
mujoco = ["mujoco==2.3.3", "gymnasium[mujoco]>0.26.0"]
mujoco-legacy = ["mujoco-py>=2.1,<2.2", "cython<3"]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0"]

testing = [
    "pytest",
    # include all the optional dependencies as well
    "shimmy[dm-control]",
    "Shimmy==1.0.0",
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@d155d0051630bb365ea6a824e02c66c068947439#egg=metaworld",
    "gymnasium[box2d]>=0.26.0",
    "mujoco==2.3.3",
    "gymnasium[mujoco]>0.26.0",
    "mujoco-py>=2.1,<2.2",
    "cython<3",
    "jax>=0.4.0",
    "jaxlib>=0.4.0"
]

[project.python-requires]
python_version = ">=3.7"
